# sci-viz-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  attribution.py  install.sh  install_blender_foundation_mcp.sh  install_freecad_mcp.sh  install_sciviz_addon.sh  mcp_runtime.py  pyproject.toml  requirements-astro.txt  requirements-design.txt  requirements.txt  styles.py
.github/workflows/: ci.yml
assets/: sci-viz-mcp-hero-white.prompt.md  sci-viz-mcp-hero.prompt.md
blender_mcp/: blender_mcp_server.py  blender_mcp_tools.json
comsol_mcp/: README_SCIVIZ.md  comsol_api.py  comsol_mcp_design.md  comsol_mcp_server.py  comsol_mcp_tools.json  io_utils.py
comsol_viz_mcp/: comsol_viz_mcp_server.py
crystal_mcp/: crystal_mcp_server.py  crystal_mcp_tools.json  renderers.py  tikz_export.py
examples/: animate_fig10.py  animate_fig10_titles.py  compose_fig10_hybrid.py  generate_fig10_nature_cover.py  generate_fig10_panel_a.py  generate_fig10_panel_b.py  generate_fig10_tikz_aps.py  generate_fig10ab_from_cif.py  generate_fig10ab_v2.py  generate_fig10c_hybrid.py  generate_ordered_defect_panels.py  generate_vacancy_panels_crystal.py  generate_vacancy_panels_ovito.py  render_3d_fluorite.py  render_3d_ostwald_v2.py  render_nature_style.py  render_panel_d.py
freecad_mcp/: README_SCIVIZ.md  THIRD_PARTY_NOTICE.md
freecad_mcp/addon/: InitGui.py
optical_design_mcp/: README_SCIVIZ.md  optical_design_mcp_server.py
ovito_mcp/: ovito_mcp_server.py  ovito_mcp_tools.json
physical_optics_mcp/: README_SCIVIZ.md  physical_optics_mcp_server.py
picogk_mcp/: README_SCIVIZ.md  __init__.py  picogk_backend.py  picogk_mcp_server.py  stack.lock.json  stack_manager.py
picogk_mcp/runner/: ExampleModel.cs  RunnerHost.cs  SciViz.PicoGK.Runner.csproj  packages.lock.json
pixinsight_mcp/: LICENSE  README_SCIVIZ.md  THIRD_PARTY_NOTICE.md  UPSTREAM_README.md  package-lock.json  package.json
pixinsight_mcp/docs/: architecture-review-request.md  architecture.md  bridge-protocol.md  dev-setup.md  mcp-tools.md  pjsr-reference.md  processes.md  recipes-catalog.md  roadmap.md  slides-intro.html
pixinsight_mcp/pjsr/: pixinsight-mcp-watcher.js
preview/: __init__.py  notify.py  server.py
ray_optics_mcp/: TELESCOPE_DESIGN_MANUAL.md  engine.py  ray_optics_mcp_server.py  telescope_designs.py  test_e2e.py  validate_designs.py
science-figure-style/: SKILL.md  example_figure.py  example_science_double.eps
sciviz_blender_addon/: __init__.py  blender_manifest.toml  cpk_colors.py  operators.py  panel.py  preview_notify.py  properties.py
scripts/: generate_mcp_config.py  generate_repo_graphic_gpt_image.py  generate_telescope_gallery.py  sync_picogk_stack.py
siril_mcp/: README_SCIVIZ.md  siril_mcp_server.py
tests/: test_comsol_viz.py  test_crystal.py  test_optical_design_mcp.py  test_ovito.py  test_physical_optics_mcp.py  test_picogk_mcp.py  test_sciviz_addon_headless.py
(+30 files in other folders)
