[project]
name = "sci-viz-mcp"
version = "0.5.1"
description = "MCP servers for scientific visualization and design: COMSOL field maps, ray-optics telescope design, crystal structures, atomistic rendering, Blender, and journal figure styles"
requires-python = ">=3.10"
dependencies = [
    "ase",
    "pymatgen",
    "matplotlib",
    "numpy",
    "spglib",
    "ovito",
]

[project.optional-dependencies]
preview = ["aiohttp"]
dev = ["pytest"]

# The Blender side is now handled by the official Blender Foundation MCP
# server (https://www.blender.org/lab/mcp-server/) plus the SciViz add-on
# under sciviz_blender_addon/. There is no Python package to depend on
# from this venv — Blender bundles its own Python.
